package v1

import (
	"context"
	"testing"

	"auth-service/internal/service"
	"auth-service/pkg/api"
)

func TestNewGRPCServer(t *testing.T) {
	t.Run("create grpc server", func(t *testing.T) {
		// Создаем простой сервис
		svc := &service.UserService{}
		server := NewGRPCServer(svc)

		if server == nil {
			t.Error("Server should not be nil")
		}
		if server.service != svc {
			t.Error("Service should be set in server")
		}
	})

	t.Run("server has required methods", func(t *testing.T) {
		// Проверяем что сервер реализует интерфейс
		svc := &service.UserService{}
		server := NewGRPCServer(svc)

		// Просто проверяем что можем создать
		_ = server
	})
}

// Тестируем логику ответов без вызова реального сервиса
func TestResponseLogic(t *testing.T) {
	t.Run("success response format", func(t *testing.T) {
		// Проверяем формат успешного ответа для Register
		userUuid := "12345"
		message := "Registration successful"

		// Эмулируем логику из метода Register
		response := &api.RegisterResponse{
			Uuid:    userUuid,
			Message: message,
		}

		if response.Uuid != userUuid {
			t.Error("UUID should be set in response")
		}
		if response.Message != message {
			t.Error("Message should be set in response")
		}
	})

	t.Run("error response format", func(t *testing.T) {
		// Проверяем формат ошибочного ответа
		errorMsg := "user already exists"

		// Эмулируем логику из метода Register при ошибке
		response := &api.RegisterResponse{
			Uuid:    "",
			Message: errorMsg,
		}

		if response.Uuid != "" {
			t.Error("UUID should be empty on error")
		}
		if response.Message != errorMsg {
			t.Error("Error message should be set")
		}
	})

	t.Run("login response structure", func(t *testing.T) {
		// Проверяем структуру LoginResponse
		response := &api.LoginResponse{
			Uuid:    "user123",
			Success: true,
			Message: "Login successful",
		}

		if response.Uuid != "user123" {
			t.Error("UUID should be user123")
		}
		if !response.Success {
			t.Error("Success should be true")
		}
		if response.Message != "Login successful" {
			t.Error("Message should be 'Login successful'")
		}
	})

	t.Run("password change response", func(t *testing.T) {
		// Проверяем структуру PasswordChangeResponse
		response := &api.PasswordChangeResponse{
			Success: true,
			Message: "Password changed successfully",
		}

		if !response.Success {
			t.Error("Success should be true")
		}
		if response.Message != "Password changed successfully" {
			t.Error("Message incorrect")
		}
	})
}

// Тестируем логику обработки ошибок
func TestErrorHandlingLogic(t *testing.T) {
	t.Run("error message propagation", func(t *testing.T) {
		// Проверяем что сообщение об ошибке передается
		testError := "test error message"

		// В реальном коде: Message: err.Error()
		if testError != "test error message" {
			t.Error("Error message should be preserved")
		}
	})

	t.Run("success messages", func(t *testing.T) {
		// Проверяем стандартные сообщения об успехе
		messages := []string{
			"Registration successful",
			"Login successful",
			"Password changed successfully",
		}

		for _, msg := range messages {
			if msg == "" {
				t.Error("Success message should not be empty")
			}
		}
	})
}

// Тестируем что методы соответствуют интерфейсу
func TestInterfaceCompatibility(t *testing.T) {
	t.Run("method signatures", func(t *testing.T) {
		// Проверяем что у нас есть нужные методы
		// Это проверка на уровне компиляции
		type checkInterface interface {
			Register(ctx context.Context, req *api.RegisterRequest) (*api.RegisterResponse, error)
			Login(ctx context.Context, req *api.LoginRequest) (*api.LoginResponse, error)
			PasswordChange(ctx context.Context, req *api.PasswordChangeRequest) (*api.PasswordChangeResponse, error)
		}

		var _ checkInterface = (*GRPCServer)(nil)
	})
}

// Проверка контекста
func TestContextUsage(t *testing.T) {
	t.Run("context is used in signatures", func(t *testing.T) {
		// Проверяем что методы принимают context.Context
		ctx := context.Background()
		if ctx == nil {
			t.Error("Context should not be nil")
		}

		// Просто проверяем что context.Background() работает
		_ = ctx
	})
}

// Простые тесты без зависимостей
func TestSimple(t *testing.T) {
	t.Run("response object creation", func(t *testing.T) {
		// Проверяем что можем создавать объекты ответов
		registerResp := &api.RegisterResponse{
			Uuid:    "test",
			Message: "test",
		}
		if registerResp == nil {
			t.Error("Should create RegisterResponse")
		}

		loginResp := &api.LoginResponse{
			Uuid:    "test",
			Success: true,
			Message: "test",
		}
		if loginResp == nil {
			t.Error("Should create LoginResponse")
		}

		passResp := &api.PasswordChangeResponse{
			Success: true,
			Message: "test",
		}
		if passResp == nil {
			t.Error("Should create PasswordChangeResponse")
		}
	})

	t.Run("request object structure", func(t *testing.T) {
		// Проверяем структуры запросов
		registerReq := &api.RegisterRequest{
			Username: "user",
			Email:    "user@example.com",
			Password: "pass",
		}
		if registerReq.Username != "user" {
			t.Error("Username should be 'user'")
		}

		loginReq := &api.LoginRequest{
			Email:    "user@example.com",
			Password: "pass",
		}
		if loginReq.Email != "user@example.com" {
			t.Error("Email should be correct")
		}

		passReq := &api.PasswordChangeRequest{
			Uuid:        "user123",
			NewPassword: "newpass",
		}
		if passReq.Uuid != "user123" {
			t.Error("UUID should be correct")
		}
	})
}
